@@ -1,27 +1,27 @@
 #!/bin/haserl
 			<div id="textOnly" style="background-color:white;height:110px;">
-				<div style="position: relative; left: 5px; top: 5px;">
+				<div style="position: relative; left: 5px; top: 0px;">
 					<center><font size="+3"><b>OpenLGTV BCM <? cat /etc/ver2 ?><br/></font><font size="+2">Web UI<br/></font><font color="blue" size="+3"><? echo $pagename ?></font></b></font></center>
 				</div>
 			</div>
-			<div id="link1Parent" style="background-color:white;height:32px;">
-				<div style="position: relative; left: 5px; top: 5px;">
+			<div id="link1Parent" style="background-color:white;height:24px;">
+				<div style="position: relative; left: 5px; top: 0px;">
 					<center><input type="button" id="link1" onKeyPress="javascript:window.location='home.cgi';" onClick="javascript:window.location='home.cgi';" value="Home" style="width:300px" /></center>
 				</div>
 			</div>
-			<div id="link2Parent" style="background-color:white;height:32px;">
-				<div style="position: relative; left: 5px; top: 5px;">
+			<div id="link2Parent" style="background-color:white;height:24px;">
+				<div style="position: relative; left: 5px; top: 0px;">
 					<center><input type="button" id="link2" onKeyPress="javascript:window.location='info.cgi';" onClick="javascript:window.location='info.cgi';" value="Info" style="width:300px" /></center>
 				</div>
 			</div>
-			<div id="link3Parent" style="background-color:white;height:32px;">
-				<div style="position: relative; left: 5px; top: 5px;">
+			<div id="link3Parent" style="background-color:white;height:24px;">
+				<div style="position: relative; left: 5px; top: 0px;">
 					<center><input type="button" id="link3" onKeyPress="javascript:window.location='settings.cgi';" onClick="javascript:window.location='settings.cgi';" value="Settings" style="width:300px" /></center>
 				</div>
 			</div>
-			<div id="link4Parent" style="background-color:white;height:32px;">
-				<div style="position: relative; left: 5px; top: 5px;">
-					<center><input type="button" id="link4" onKeyPress="javascript:window.location='samplekeycontrol.cgi';" onClick="javascript:window.location='samplekeycontrol.cgi';" value="Sample Key Control" style="width:300px" /></center>
+			<div id="link4Parent" style="background-color:white;height:24px;">
+				<div style="position: relative; left: 5px; top: 0px;">
+					<center><input type="button" id="link4" onKeyPress="javascript:window.location='mount.cgi';" onClick="javascript:window.location='mount.cgi';" value="Network Share Mounts" style="width:300px" /></center>
 				</div>
 			</div>
 
