@@ -8,7 +8,7 @@
 <BR/><BR/>
 <IMG SRC="http://openlgtv.org.ru/wiki/openlgtv_logo.png" ALT="OpenLGTV BCM"/>
 <BR/>OpenLGTV BCM Web UI<BR/><BR/>
-[TODO]<BR/>
+[Work in Progress]<BR/>
 </CENTER>
 </FONT>
 </BODY>
